--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "compile": "aztec-cli compile . -o './src/app/src/abis/cointoss' -i './src/app/src/abis/cointoss' -ts './src/app/src/abis/cointoss'",
-    "test": "yarn compile && NODE_NO_WARNINGS=1 node --experimental-vm-modules $(yarn bin jest) --runInBand --passWithNoTests --testTimeout=15000"
+    "compile": "aztec-cli compile . -o './src/artifacts' -i './src/artifacts' -ts './src/artifacts'",
+    "test": "yarn compile && NODE_NO_WARNINGS=1 node --experimental-vm-modules $(yarn bin jest) --runInBand --passWithNoTests --testTimeout=50000"
   },
   "jest": {
     "preset": "ts-jest/presets/default-esm",
